In development:

* Check compiles for the Windows using MinGW-w64.

* check_check_export test suite passes for MinGW-w64 builds, tested with wine 1.4. The remaining 5 test suites still fail.

* On systems without timer_settimer, use setitimer (if available) to get
  subsecond unit test timeouts. If setitimer is unavailable, fallback
  on alarm.

Thu, Apr 18, 2013: Released Check 0.9.10
  based on r743 (2013-04-18 11:27:03 +0200)

* Support 64bit int for __ck_assert_int. Patch from bug #3599471

* Add equivalent uint variants for __ck_assert_int. Patch from bug #3600433.

* Detect if the system has a C99 compliant version of the printf related
  functions for check to use, and if not use an implementation provided by
  check.

* Updated HACKING and release procedure in Makefile.am.

* Detect if the system has clock_gettime() available, and if not use an
  implementation provided by check. clock_gettime() is used to measure
  test durations. The implementation for OSX uses OSX specific system calls 
  to get the time. For all other systems, clock_gettime() does nothing.

* Updated documentation in check.h to reference new check API.

* Remove usage of deprecated fail(), fail_if(), and fail_unless() calls from
  check's unit tests.

* Fix implementation of putenv in check's libcompat for systems that do not
  provide it.

* Fix implementation of unsettenv in check's libcompat for systems that do
  not provide it. 

* Improvements to the new Check API: new comparison functions for pointers:
  ck_assert_ptr_(eq|ne).

* Test timeouts can now be in nanosecond precision. The tcase_set_timeout
  call, and CK_DEFAULT_TIMEOUT and CK_TIMEOUT_MULTIPLIER environment
  variables now can accept floating point arguments.

* Cleanup compile warnings, patch #3579199 on SF.

* Renamed Check's internal list functions to start with check_, patch #3448601 on SF.

Mon, Oct 22, 2012: Released Check 0.9.9
  based on r637 (2012-10-22 13:54:14 +0200)
